src/Base/main/default/objects/Case_Part__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>AcctSeedERP__Material__c</referenceTo>
    <relationshipLabel>Case Parts</relationshipLabel>
    <relationshipName>Case_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>