src/Base/main/default/objects/Case_Part__c/fields/Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Quantity__c</fullName>
    <description>Number of quantity to order automatically in Parts Order from Claim</description>
    <label>Order Quantity</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>