src/Base/main/default/objects/Case_Part__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Case Parts</relationshipLabel>
    <relationshipName>Case_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>