src/Base/main/default/objects/Case_Part__c/fields/Quantity_Received__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Received__c</fullName>
    <formula>Purchase_Order_Line__r.AcctSeedERP__Quantity_Received__c</formula>
    <label>Quantity Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>